add incremental cache, faster sync path, and better binary distribution
Make notion-md-gen do less repeated work per run and improve release consumption so callers can use prebuilt binaries instead of compiling in CI.

- add incremental sync state with cache file support (`incremental`, `cacheFile`, and new CLI flags)
- skip unchanged pages based on Notion `last_edited_time` plus local output existence checks
- run page fetch+render concurrently in parallel mode to speed end-to-end generation
- fix duplicate Notion status update calls during processing
- skip image redownload when the target file already exists locally
- update installer to detect OS/arch and fetch latest release binary from configurable repo
- expand GoReleaser build matrix to include arm variants for broader release coverage
- document incremental flags and prebuilt binary install behavior in README and example config

This reduces unnecessary Notion/image work on repeat runs and makes cloud deploy pipelines less dependent on in-build Go compilation.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,15 @@ builds:
     goarch:
       - amd64
       - arm64
+      - arm
+    goarm:
+      - "6"
+      - "7"
     ignore:
+      - goos: darwin
+        goarch: arm
+      - goos: windows
+        goarch: arm
       - goos: windows
         goarch: arm64
 
